--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,14 @@
        </div>
    </nav>
 
+   <div class="headerBar">
+        <ul>
+            <li> {{now}}   </li>
+            <li>  {{time}}  </li>
+            <li>  {{tip}}  </li>
+        </ul>
+
+   </div>
 
    <div class="container">
        <div class="left">
