--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
    <div class="headerBar">
         <ul>
             <li> {{now}}   </li>
-            <li>  {{time}}  </li>
+            <li>  {{quote}}  </li>
             <li>  {{tip}}  </li>
         </ul>
 
