--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <title>StudyFlow</title>
    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <script src="js/index.js" defer></script>
 </head>
 <body>
    <nav>
@@ -77,6 +78,7 @@
            {% endfor %}
        </ul>
    </div>
+   <script src="js/index.js"></script>
 </body>
 </html>
 
