--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
    <meta charset="UTF-8">
    <title>StudyFlow</title>
    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script src="js/index.js" defer></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+
 </head>
 <body>
    <nav>
@@ -78,7 +79,6 @@
            {% endfor %}
        </ul>
    </div>
-   <script src="js/index.js"></script>
 </body>
 </html>
 
