--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
            <h2>My Study Playlist</h2>
            <!-- Embed Spotify directly -->
            <iframe style="border-radius:12px"
-                   src="https://open.spotify.com/embed/playlist/your_playlist_id_here"
+                   src="https://open.spotify.com/embed/track/1Gbf1RVCUZb5NuN8GEo5pV?"
                    width="100%" height="152"
                    frameborder="0"
                   allowtransparency="true"
