--- a/templates/index.html
+++ b/templates/index.html
@@ -48,11 +48,11 @@
            <h2>My Study Playlist</h2>
            <!-- Embed Spotify directly -->
            <iframe style="border-radius:12px"
-                   src="https://open.spotify.com/playlist/3oxQgtzpQJpNYOwUehXAGT?si=TARd6y5bQiCcJHnzHlLWkw&pi=LOA-LK9BRwW_I"
-                   width="100%" height="152"
-                   frameborder="0"
-                  allowtransparency="true"
-                   allow="encrypted-media">
+                src="https://open.spotify.com/embed/playlist/3oxQgtzpQJpNYOwUehXAGT?"
+                width="100%" height="152"
+                frameborder="0"
+                allowtransparency="true"
+                allow="encrypted-media">
            </iframe>
        </div>
    </div>
