changed the navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,28 @@
    <nav>
        <h1>StudyFlow</h1>
        <div class="links">
-           <a href="https://www.linkedin.com/in/yourname" target="_blank">LinkedIn</a>
-           <a href="https://github.com/yourname" target="_blank">GitHub</a>
-           <a href="mailto:your@email.com">Email</a>
+            <ul>
+                <li class="menu"> <i class="fa-brands fa-linkedin"></i></li>
+                <i class="fa-solid fa-arrow-down"></i>
+                <div class="menuContent"> 
+                    <a class="link-hide" href="https://www.linkedin.com/in/kanan-garg" target="_blank"> Kanan's LinkedIn</a>
+                    <a class="link-hide" href="https://www.linkedin.com/in/nathania-mckenzie" target="_blank"> Nathania's LinkedIn</a>
+                </div>
+
+                <li class="menu"> target="_blank"><i class="fa-brands fa-github"></i></li>
+                <i class="fa-solid fa-arrow-down"></i>
+                 <div class="menuContent"> 
+                    <a class="link-hide" href="https://github.com/KananGarg314" target="_blank"> Kanan's Github</a>
+                    <a class="link-hide" href="https://github.com/naarmc2" target="_blank"> Nathania's Github</a>
+                </div>
+
+                <li class="menu"> <a class = "menu" href="mailto:kanan.garg@csedge.org">Email</a></li>
+                <i class="fa-solid fa-arrow-down"></i>
+                <div class="menuContent"> 
+                    <a class="link-hide" href="mailto:kanan.garg@csedge.org" target="_blank"> Kanan's Email</a>
+                    <a class="link-hide" href="mailto:nathania.mckenzie@csedge.org" target="_blank"> Nathania's Email</a>
+                </div>
+            </ul>
        </div>
    </nav>
 
