--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Crafty+Girls&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poiret+One&display=swap');
 
 :root{
-    --darkGreen: #1C352D;
+    --forest: #1C352D;
     --sage: #A6B28B;
     --peach: #F5C9B0;
     --grey: #F9F6F3;
@@ -13,6 +13,11 @@ body {
    margin: 0;
    padding: 0;
 }
+ 
+
+  
+
+
 
 .headerBar{
     display:flex;
@@ -37,7 +42,7 @@ body {
 }
 
 nav {
-   background: #0F4C81;
+   background: var(--forest);
    color: white;
    display: flex;
    justify-content: space-between;
@@ -45,12 +50,34 @@ nav {
 }
 
 
-nav .links a {
+nav .links a, nav .links li {
    color: white;
    margin-left: 1rem;
    text-decoration: none;
+   list-style: none;
+
 }
 
+.links{
+  display: inline-block;
+}
+
+.links,.link-hide{
+  display: inline-block;
+  color: #f6b44a;
+  padding: 12px 16px;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.link-hide{
+  display: block;
+}
+
+.link-hide:hover,.links:hover{
+  background-color: var(--forest);
+  color: black;
+}
 
 .container {
    display: flex;
