--- a/templates/index.html
+++ b/templates/index.html
@@ -14,28 +14,28 @@
 <body>
    <nav>
        <h1>StudyFlow</h1>
-            <ul class="links">
-                <li class="menu"> <i class="fa-brands fa-linkedin"></i></li>
+            <div class="dropdown">
+                <button class="dropdown-toggle"> <i class="fa-brands fa-linkedin"></i></button>
                 <i class="fa-solid fa-arrow-down"></i>
-                <div class="menuContent"> 
-                    <a class="link-hide" href="https://www.linkedin.com/in/kanan-garg" target="_blank"> Kanan's LinkedIn</a>
-                    <a class="link-hide" href="https://www.linkedin.com/in/nathania-mckenzie" target="_blank"> Nathania's LinkedIn</a>
+                <div class="dropdown-content"> 
+                    <a  href="https://www.linkedin.com/in/kanan-garg" target="_blank"> Kanan's LinkedIn</a>
+                    <a  href="https://www.linkedin.com/in/nathania-mckenzie" target="_blank"> Nathania's LinkedIn</a>
                 </div>
 
-                <li class="menu"><i class="fa-brands fa-github"></i></li>
+                <button class="dropdown-toggle"><i class="fa-brands fa-github"></i></button>
                 <i class="fa-solid fa-arrow-down"></i>
-                 <div class="menuContent"> 
-                    <a class="link-hide" href="https://github.com/KananGarg314" target="_blank"> Kanan's Github</a>
-                    <a class="link-hide" href="https://github.com/naarmc2" target="_blank"> Nathania's Github</a>
+                 <div class="dropdown-content"> 
+                    <a  href="https://github.com/KananGarg314" target="_blank"> Kanan's Github</a>
+                    <a  href="https://github.com/naarmc2" target="_blank"> Nathania's Github</a>
                 </div>
 
-                <li class="menu"><i class="fa-solid fa-envelope"></i> </li>
+                <button class="dropdown-toggle"><i class="fa-solid fa-envelope"></i></button>
                 <i class="fa-solid fa-arrow-down"></i>
-                <div class="menuContent"> 
-                    <a class="link-hide" href="mailto:kanan.garg@csedge.org" target="_blank"> Kanan's Email</a>
-                    <a class="link-hide" href="mailto:nathania.mckenzie@csedge.org" target="_blank"> Nathania's Email</a>
+                <div class="dropdown-content"> 
+                    <a  href="mailto:kanan.garg@csedge.org" target="_blank"> Kanan's Email</a>
+                    <a href="mailto:nathania.mckenzie@csedge.org" target="_blank"> Nathania's Email</a>
                 </div>
-            </ul>
+            </div>
       
    </nav>
 
