--- a/templates/index.html
+++ b/templates/index.html
@@ -14,29 +14,31 @@
 <body>
    <nav>
        <h1>StudyFlow</h1>
-            <div class="dropdown">
+            <div class="links">
+                <div class="dropdown">
                 <button class="dropdown-toggle"> <i class="fa-brands fa-linkedin"></i></button>
-                <i class="fa-solid fa-arrow-down"></i>
-                <div class="dropdown-content"> 
+]                <div class="dropdown-content"> 
                     <a  href="https://www.linkedin.com/in/kanan-garg" target="_blank"> Kanan's LinkedIn</a>
                     <a  href="https://www.linkedin.com/in/nathania-mckenzie" target="_blank"> Nathania's LinkedIn</a>
                 </div>
 
-                <button class="dropdown-toggle"><i class="fa-brands fa-github"></i></button>
-                <i class="fa-solid fa-arrow-down"></i>
-                 <div class="dropdown-content"> 
-                    <a  href="https://github.com/KananGarg314" target="_blank"> Kanan's Github</a>
-                    <a  href="https://github.com/naarmc2" target="_blank"> Nathania's Github</a>
+                
+                <div class="dropdown">
+                    <button class="dropdown-toggle"><i class="fa-brands fa-github"></i></button>
+    ]                 <div class="dropdown-content"> 
+                        <a  href="https://github.com/KananGarg314" target="_blank"> Kanan's Github</a>
+                        <a  href="https://github.com/naarmc2" target="_blank"> Nathania's Github</a>
+                    </div>
                 </div>
 
-                <button class="dropdown-toggle"><i class="fa-solid fa-envelope"></i></button>
-                <i class="fa-solid fa-arrow-down"></i>
-                <div class="dropdown-content"> 
-                    <a  href="mailto:kanan.garg@csedge.org" target="_blank"> Kanan's Email</a>
-                    <a href="mailto:nathania.mckenzie@csedge.org" target="_blank"> Nathania's Email</a>
+                <div>
+                    <button class="dropdown-toggle"><i class="fa-solid fa-envelope"></i></button>
+    ]                <div class="dropdown-content"> 
+                        <a  href="mailto:kanan.garg@csedge.org" target="_blank"> Kanan's Email</a>
+                        <a href="mailto:nathania.mckenzie@csedge.org" target="_blank"> Nathania's Email</a>
+                    </div>
                 </div>
             </div>
-      
    </nav>
 
    <div class="headerBar">
