--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
        <h1>StudyFlow</h1>
             <div class="links">
                 <div class="dropdown">
-                <button class="dropdown-toggle"> <i class="fa-brands fa-linkedin"></i></button>
+                <button class="dropdown-toggle"><i class="fa-brands fa-linkedin"></i></button>
 ]                <div class="dropdown-content"> 
                     <a  href="https://www.linkedin.com/in/kanan-garg" target="_blank"> Kanan's LinkedIn</a>
                     <a  href="https://www.linkedin.com/in/nathania-mckenzie" target="_blank"> Nathania's LinkedIn</a>
@@ -43,9 +43,9 @@
 
    <div class="headerBar">
         <ul>
-            <li> {{now}}   </li>
-            <li>  {{quote}}  </li>
-            <li>  {{tip}}  </li>
+            <li> <i class="fa-solid fa-clock"></i>{{now}}   </li>
+            <li>  <i class="fa-solid fa-quote-left"></i>{{quote}}  <i class="fa-solid fa-quote-right"></i></li>
+            <li>  <i class="fa-brands fa-gratipay"></i>{{tip}}  </li>
         </ul>
 
    </div>
