--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,8 @@
                <button type="button" onclick="stopTimer()">Stop</button>
            </div>
            <audio id="alert-sound" src="{{ url_for('static', filename='bing.mp3') }}" preload="auto"></audio>
+
+           <img src="{{ url_for('static', filename='studyFlowLofi.jpg') }}" alt="">
        </div>
 
 
