--- a/templates/index.html
+++ b/templates/index.html
@@ -73,9 +73,9 @@
         <li class="{{ 'done' if task.done else '' }}">
             {{ task.task }}
             {% if not task.done %}
-            <a href="{{ url_for('complete_task', task_id=loop.index0) }}">✔</a>
+            <a class="checkMark" href="{{ url_for('complete_task', task_id=loop.index0) }}">✔</a>
             {% endif %}
-            <a href="{{ url_for('delete_task', task_id=loop.index0) }}">✖</a>
+            <a class="xMark" href="{{ url_for('delete_task', task_id=loop.index0) }}">✖</a>
         </li>
         {% endfor %}
     </ul>
