--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <script src="https://kit.fontawesome.com/191a1815e8.js" crossorigin="anonymous"></script>
+    <link rel = "icon" type = "image/jpg" href = "{{ url_for('static', filename='studyFlowLofi.jpg') }}">   <!-- the image displayed beside title-->
+
    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     
 </head>
